--- a/.github/workflows/react-ci.yml
+++ b/.github/workflows/react-ci.yml
@@ -21,19 +21,21 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '22'
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: venus/package-lock.json
 
-      - name: Cache Primes
+      - name: Cache node_modules
         id: cache-react
         uses: actions/cache@v4
         with:
-          path: node_modules
-          key: react-${{ hashFiles('**/package-lock.json') }}
+          path: venus/node_modules
+          key: react-${{ hashFiles('venus/package-lock.json') }}
 
       - name: Install dependencies
         if: steps.cache-react.outputs.cache-hit != 'true'
+        run: npm ci
         working-directory: venus
-        run: npm install
 
       - name: Run tests
         working-directory: venus
