--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -45,6 +45,14 @@ jobs:
       - name: Verify Docker Compose Installation
         run: docker-compose --version
 
+      - name: Cache local Maven repository
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
       - name: Build and start services
         run: docker-compose -f vulcanus/docker/merkury/docker-compose.yml up -d
 
