--- a/.github/workflows/react-ci.yml
+++ b/.github/workflows/react-ci.yml
@@ -12,7 +12,7 @@ on:
     branches: [ master, develop ]
 
 jobs:
-  test:
+  setup:
     runs-on: ubuntu-latest
 
     steps:
@@ -36,6 +36,19 @@ jobs:
         if: steps.cache-react.outputs.cache-hit != 'true'
         run: npm install
         working-directory: venus
+
+  test:
+    runs-on: ubuntu-latest
+    needs: setup
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Use cached node_modules
+        uses: actions/cache@v4
+        with:
+          path: venus/node_modules
+          key: react-${{ hashFiles('venus/package-lock.json') }}
 
       - name: Run tests
         working-directory: venus
