--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -12,7 +12,7 @@ on:
     branches: [ master, develop ]
 
 jobs:
-  build:
+  setup:
     runs-on: ubuntu-latest
 
     steps:
@@ -32,7 +32,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: /usr/local/bin/docker-compose
-          key: docker-compose-v2.20.2-$(runner.os)-$(runner.arch)
+          key: docker-compose-v2.20.2-${{ runner.os }}-${{ runner.arch }}
           restore-keys: |
             docker-compose-
 
@@ -45,7 +45,14 @@ jobs:
       - name: Verify Docker Compose Installation
         run: docker-compose --version
 
-      - name: Cache local Maven repository
+  build:
+    runs-on: ubuntu-latest
+    needs: setup
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Cache Maven repository
         uses: actions/cache@v4
         with:
           path: |
@@ -54,16 +61,32 @@ jobs:
           key: maven-${{ runner.os }}-${{ hashFiles('vulcanus/pom.xml') }}
           restore-keys: |
             maven-${{ runner.os }}-
-            maven-
 
       - name: Build and start services
         run: docker-compose -f vulcanus/docker/merkury/docker-compose.yml up -d
 
       - name: Wait for services to be ready
-        run: sleep 30 # Adjust this timing as necessary based on service initialization.
+        run: sleep 30
 
       - name: Build vulcanus
         run: mvn -B package --file vulcanus/pom.xml
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Cache Maven repository
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.m2/repository
+            ~/.m2/wrapper
+          key: maven-${{ runner.os }}-${{ hashFiles('vulcanus/pom.xml') }}
+          restore-keys: |
+            maven-${{ runner.os }}-
 
       - name: Test vulcanus
         run: mvn -B test --file vulcanus/pom.xml
