--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -23,7 +23,16 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
-          check-latest: true
+
+      - name: Force JAVA_HOME to use JDK 21
+        run: |
+          echo "JAVA_HOME=$JAVA_HOME_21_X64" >> $GITHUB_ENV
+          echo "PATH=$JAVA_HOME_21_X64/bin:$PATH" >> $GITHUB_ENV
+
+      - name: Verify Java Version
+        run: |
+          java -version
+          echo "JAVA_HOME=$JAVA_HOME"  
 
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
