--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -24,16 +24,6 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
-      - name: Force JAVA_HOME to use JDK 21
-        run: |
-          echo "JAVA_HOME=$JAVA_HOME_21_X64" >> $GITHUB_ENV
-          echo "PATH=$JAVA_HOME_21_X64/bin:$PATH" >> $GITHUB_ENV
-
-      - name: Verify Java Version
-        run: |
-          java -version
-          echo "JAVA_HOME=$JAVA_HOME"  
-
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
 
@@ -61,6 +51,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
 
       - name: Cache Maven repository
         uses: actions/cache@v4
