--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -74,11 +74,6 @@ jobs:
       - name: Wait for services to be ready
         run: sleep 30
 
-      - name: Check Java Version
-        run: |
-          java -version
-          echo "JAVA_HOME=$JAVA_HOME"
-
       - name: Build vulcanus
         run: mvn -B package --file vulcanus/pom.xml
 
@@ -88,6 +83,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
 
       - name: Cache Maven repository
         uses: actions/cache@v4
