--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -72,7 +72,11 @@ jobs:
         run: docker compose -f vulcanus/docker/merkury/docker-compose.yml up -d
 
       - name: Wait for services to be ready
-        run: sleep 30
+        run: |
+          for i in {1..30}; do
+            curl -sSf http://localhost:8080 && break
+            sleep 2
+          done
 
       - name: Build vulcanus
         run: mvn -B package --file vulcanus/pom.xml
@@ -104,4 +108,4 @@ jobs:
         run: mvn -B test --file vulcanus/pom.xml
 
       - name: Shut down services
-        run: docker-compose -f vulcanus/docker/merkury/docker-compose.yml down
+        run: docker compose -f vulcanus/docker/merkury/docker-compose.yml down
