--- a/.github/workflows/react-ci.yml
+++ b/.github/workflows/react-ci.yml
@@ -20,7 +20,7 @@ on:
 jobs:
   setup:
     runs-on: ubuntu-latest
-
+    if: github.event_name != 'push' || github.event.pull_request == null
     steps:
       - uses: actions/checkout@v3
 
