--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -3,14 +3,21 @@ name: Java CI
 on:
   push:
     branches:
-      - '**'
+      - 'feature/**'
+      - 'fix/**'
+    paths:
+      - 'vulcanus/**'
   pull_request:
-    branches: [ master, develop ]
+    types:
+      - opened
+    branches:
+      - master
+      - develop
   merge_group:
     branches: [ master, develop ]
 
 jobs:
-  build:
+  setup:
     runs-on: ubuntu-latest
 
     steps:
@@ -30,7 +37,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: /usr/local/bin/docker-compose
-          key: docker-compose-v2.20.2-$(runner.os)-$(runner.arch)
+          key: docker-compose-v2.20.2-${{ runner.os }}-${{ runner.arch }}
           restore-keys: |
             docker-compose-
 
@@ -43,17 +50,63 @@ jobs:
       - name: Verify Docker Compose Installation
         run: docker-compose --version
 
+  build:
+    runs-on: ubuntu-latest
+    needs: setup
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: Cache Maven repository
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.m2/repository
+            ~/.m2/wrapper
+          key: maven-${{ runner.os }}-${{ hashFiles('vulcanus/pom.xml') }}
+          restore-keys: |
+            maven-${{ runner.os }}-
+
       - name: Build and start services
-        run: docker-compose -f vulcanus/docker/merkury/docker-compose.yml up -d
+        run: docker compose -f vulcanus/docker/merkury/docker-compose.yml up -d
 
       - name: Wait for services to be ready
-        run: sleep 30 # Adjust this timing as necessary based on service initialization.
+        run: sleep 30
 
       - name: Build vulcanus
         run: mvn -B package --file vulcanus/pom.xml
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: Cache Maven repository
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.m2/repository
+            ~/.m2/wrapper
+          key: maven-${{ runner.os }}-${{ hashFiles('vulcanus/pom.xml') }}
+          restore-keys: |
+            maven-${{ runner.os }}-
 
       - name: Test vulcanus
         run: mvn -B test --file vulcanus/pom.xml
 
       - name: Shut down services
-        run: docker-compose -f vulcanus/docker/merkury/docker-compose.yml down
+        run: docker compose -f vulcanus/docker/merkury/docker-compose.yml down
