--- a/.github/workflows/react-ci.yml
+++ b/.github/workflows/react-ci.yml
@@ -3,27 +3,57 @@ name: React CI
 on:
   push:
     branches:
-      - '**'
+      - 'feature/**'
+      - 'fix/**'
+    paths:
+      - 'venus/**'
   pull_request:
-    branches: [ master, develop ]
+    types:
+      - opened
+    branches:
+      - master
+      - develop
   merge_group:
     branches: [ master, develop ]
 
 jobs:
-  test:
+  setup:
     runs-on: ubuntu-latest
-
+    if: github.event_name != 'push' || github.event.pull_request == null
     steps:
       - uses: actions/checkout@v3
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '22'
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: venus/package-lock.json
+
+      - name: Cache node_modules
+        id: cache-react
+        uses: actions/cache@v4
+        with:
+          path: venus/node_modules
+          key: react-${{ hashFiles('venus/package-lock.json') }}
 
       - name: Install dependencies
-        working-directory: venus
+        if: steps.cache-react.outputs.cache-hit != 'true'
         run: npm install
+        working-directory: venus
+
+  test:
+    runs-on: ubuntu-latest
+    needs: setup
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Use cached node_modules
+        uses: actions/cache@v4
+        with:
+          path: venus/node_modules
+          key: react-${{ hashFiles('venus/package-lock.json') }}
 
       - name: Run tests
         working-directory: venus
