--- a/vulcanus/docker/merkury/docker-compose.yml
+++ b/vulcanus/docker/merkury/docker-compose.yml
@@ -15,16 +15,15 @@ services:
 
   mongo-db:
     container_name: mongo-db
-    image: mongo:latest
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: user
-      MONGO_INITDB_ROOT_PASSWORD: password
-      MONGO_INITDB_DATABASE: dev_mongo_db
+    build:
+      context: ./mongo
+      dockerfile: Dockerfile
+    env_file:
+      - ./mongo/mongo.env
     ports:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
-      - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
 
   redis:
     container_name: redis
