--- a/vulcanus/docker/merkury/docker-compose.yml
+++ b/vulcanus/docker/merkury/docker-compose.yml
@@ -4,10 +4,8 @@ services:
   postgres-db:
     container_name: postgres-db
     image: postgres:latest
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: dev_postgres_db
+    env_file:
+      - ./postgres/postgres.env
     ports:
       - "5432:5432"
     volumes:
