--- a/vulcanus/docker/merkury/docker-compose.yml
+++ b/vulcanus/docker/merkury/docker-compose.yml
@@ -30,24 +30,18 @@ services:
       - "6379:6379"
 
   spring-boot-app:
+    container_name: vulcanus-spring-boot-app
     build:
       context: ./spring-boot-app
       dockerfile: Dockerfile
+    env_file:
+      - ./spring-boot-app/spring_boot_app.env
+    ports:
+      - "8081:8081"
     depends_on:
       - postgres-db
       - mongo-db
       - redis
-    environment:
-      SPRING_PROFILES_ACTIVE: docker
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-db:5432/dev_postgres_db
-      SPRING_DATASOURCE_USERNAME: user
-      SPRING_DATASOURCE_PASSWORD: password
-      SPRING_DATA_MONGODB_URI: mongodb://user:password@mongo-db:27017/dev_mongo_db
-      SPRING_DATA_MONGODB_DATABASE: dev_mongo_db
-      SPRING_DATA_REDIS_HOST: redis
-      SPRING_DATA_REDIS_PORT: 6379
-    ports:
-      - "8081:8081"
 
   prometheus:
     build:
