--- a/vulcanus/docker/merkury/docker-compose.yml
+++ b/vulcanus/docker/merkury/docker-compose.yml
@@ -4,10 +4,8 @@ services:
   postgres-db:
     container_name: postgres-db
     image: postgres:latest
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: dev_postgres_db
+    env_file:
+      - ./postgres/postgres.env
     ports:
       - "5432:5432"
     volumes:
@@ -15,16 +13,13 @@ services:
 
   mongo-db:
     container_name: mongo-db
-    image: mongo:latest
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: user
-      MONGO_INITDB_ROOT_PASSWORD: password
-      MONGO_INITDB_DATABASE: dev_mongo_db
+    build: ./mongo
+    env_file:
+      - ./mongo/mongo.env
     ports:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
-      - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
 
   redis:
     container_name: redis
@@ -33,26 +28,21 @@ services:
       - "6379:6379"
 
   spring-boot-app:
+    container_name: vulcanus-spring-boot-app
     build:
       context: ./spring-boot-app
       dockerfile: Dockerfile
+    env_file:
+      - ./spring-boot-app/spring_boot_app.env
+    ports:
+      - "8080:8080"
     depends_on:
       - postgres-db
       - mongo-db
       - redis
-    environment:
-      SPRING_PROFILES_ACTIVE: docker
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-db:5432/dev_postgres_db
-      SPRING_DATASOURCE_USERNAME: user
-      SPRING_DATASOURCE_PASSWORD: password
-      SPRING_DATA_MONGODB_URI: mongodb://user:password@mongo-db:27017/dev_mongo_db
-      SPRING_DATA_MONGODB_DATABASE: dev_mongo_db
-      SPRING_DATA_REDIS_HOST: redis
-      SPRING_DATA_REDIS_PORT: 6379
-    ports:
-      - "8081:8081"
 
   prometheus:
+    container_name: prometheus
     build:
       context: ./prometheus
       dockerfile: Dockerfile
@@ -62,31 +52,34 @@ services:
       - spring-boot-app
 
   grafana:
+    container_name: grafana
     build:
       context: ./grafana
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
+    volumes:
+      - grafana-storage:/var/lib/grafana
     depends_on:
       - prometheus
 
   locust:
+    container_name: locust
     build:
       context: ./locust
       dockerfile: Dockerfile
     depends_on:
       - postgres-db
-    environment:
-      POSTGRES_HOST: postgres-db
-      POSTGRES_DB: dev_postgres_db
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
+      - spring-boot-app
+    env_file:
+      - ./locust/locust.env
     ports:
       - "8089:8089"
     command: >
       -f /mnt/locust/user_traffic.py
-      --host=http://host.docker.internal:8080
+      --host=http://vulcanus-spring-boot-app:8080
 
 volumes:
   postgres_data:
   mongo_data:
+  grafana-storage:
