--- a/.github/workflows/react-ci.yml
+++ b/.github/workflows/react-ci.yml
@@ -28,14 +28,14 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: venus/package-lock.json
+          cache-dependency-path: venus/package.json
 
       - name: Cache node_modules
         id: cache-react
         uses: actions/cache@v4
         with:
           path: venus/node_modules
-          key: react-${{ hashFiles('venus/package-lock.json') }}
+          key: react-${{ hashFiles('venus/package.json') }}
 
       - name: Install dependencies
         if: steps.cache-react.outputs.cache-hit != 'true'
@@ -53,7 +53,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: venus/node_modules
-          key: react-${{ hashFiles('venus/package-lock.json') }}
+          key: react-${{ hashFiles('venus/package.json') }}
 
       - name: Run tests
         working-directory: venus
