--- a/venus/package.json
+++ b/venus/package.json
@@ -32,8 +32,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.6",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "cypress": "^13.17.0",
@@ -47,6 +47,7 @@
     "postcss": "^8.4.40",
     "prettier": "3.3.3",
     "tailwindcss": "^3.4.7",
+    "typescript": "^5.8.3",
     "vite": "^5.3.4",
     "vitest": "^2.1.8"
   }
