--- a/venus/package.json
+++ b/venus/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
+    "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.51.23",
     "antd": "^5.23.4",
     "axios": "^1.7.3",
@@ -26,16 +27,17 @@
     "react-leaflet": "^4.2.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.3",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
     "cypress": "^13.17.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.3",
@@ -44,9 +46,8 @@
     "jest": "^29.7.0",
     "jsdoc": "^4.0.4",
     "jsdom": "^25.0.1",
-    "postcss": "^8.4.40",
-    "prettier": "3.3.3",
-    "tailwindcss": "^3.4.7",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "vite": "^5.3.4",
     "vitest": "^2.1.8"
   }
