--- a/venus/package.json
+++ b/venus/package.json
@@ -47,6 +47,7 @@
     "jsdom": "^25.0.1",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwind-scrollbar": "^4.0.2",
     "typescript": "^5.8.3",
     "vite": "^5.3.4",
     "vitest": "^2.1.8"
