--- a/venus/tsconfig.json
+++ b/venus/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "target": "es2016",
-    "module": "commonjs",
+    "module": "esnext",
+    "moduleResolution": "node",
     "jsx": "react-jsx",
     "allowJs": true,
     "checkJs": false,
