--- a/venus/package.json
+++ b/venus/package.json
@@ -16,10 +16,12 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.51.23",
+    "@vis.gl/react-maplibre": "^8.0.4",
     "antd": "^5.23.4",
     "axios": "^1.7.3",
     "dotenv": "^16.4.7",
     "leaflet": "^1.9.4",
+    "maplibre-gl": "^5.4.0",
     "openmeteo": "^1.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
