--- a/vulcanus/pom.xml
+++ b/vulcanus/pom.xml
@@ -199,6 +199,11 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
             <version>3.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-storage-blob</artifactId>
+            <version>12.30.0</version>
+        </dependency>
     </dependencies>
 
     <build>
