--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.profiles.default=dev,logging
 spring.application.name=vulcanus
 email.sending.enabled=true
-# PostgreSQL Configuration
+# PostgresSQL Configuration
 spring.datasource.username=user
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create-drop
