--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -14,6 +14,10 @@ management.prometheus.metrics.export.enabled=true
 management.metrics.tags.application=vulcanus
 management.endpoint.prometheus.enabled=true
 
+#Spring file upload configuration
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+
 #urls
 url.github-email-endpoint=https://api.github.com/user/emails
 url.after-login-page-url=http://localhost:5173/
