--- a/vulcanus/pom.xml
+++ b/vulcanus/pom.xml
@@ -204,6 +204,11 @@
             <artifactId>azure-storage-blob</artifactId>
             <version>12.30.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.20.1</version>
+        </dependency>
     </dependencies>
 
     <build>
