--- a/venus/package.json
+++ b/venus/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.3",
     "dotenv": "^16.4.7",
     "maplibre-gl": "^5.4.0",
+    "motion": "^12.10.4",
     "openmeteo": "^1.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
