--- a/vulcanus/src/main/resources/application.properties
+++ b/vulcanus/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.profiles.default=dev,logging
 spring.application.name=vulcanus
 email.sending.enabled=true
-# PostgreSQL Configuration
+# PostgresSQL Configuration
 spring.datasource.username=user
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -13,6 +13,10 @@ management.endpoint.health.show-details=always
 management.prometheus.metrics.export.enabled=true
 management.metrics.tags.application=vulcanus
 management.endpoint.prometheus.enabled=true
+
+#Spring file upload configuration
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
 
 #urls
 url.github-email-endpoint=https://api.github.com/user/emails
@@ -46,3 +50,5 @@ spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapi
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+#azure
+azure.storage.connection-string=${AZURE_STORAGE_CONNECTION_STRING}
