--- a/venus/package.json
+++ b/venus/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
+    "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.51.23",
     "@vis.gl/react-maplibre": "^8.0.4",
