--- a/venus/package.json
+++ b/venus/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.51.23",
+    "@tinymce/tinymce-react": "^6.1.0",
     "@vis.gl/react-maplibre": "^8.0.4",
     "antd": "^5.23.4",
     "axios": "^1.7.3",
