--- a/venus/package.json
+++ b/venus/package.json
@@ -30,7 +30,8 @@
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
-    "tailwindcss": "^4.1.3"
+    "tailwindcss": "^4.1.3",
+    "tinymce": "^7.9.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
