--- a/venus/package.json
+++ b/venus/package.json
@@ -19,6 +19,7 @@
     "@vis.gl/react-maplibre": "^8.0.4",
     "antd": "^5.23.4",
     "axios": "^1.7.3",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "maplibre-gl": "^5.4.0",
     "motion": "^12.10.4",
