--- a/.github/workflows/react-ci.yml
+++ b/.github/workflows/react-ci.yml
@@ -17,7 +17,7 @@ on:
     branches: [ master, develop ]
 
 jobs:
-  test:
+  formatting-and-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -31,6 +31,9 @@ jobs:
       - name: Install dependencies
         run: npm install
         working-directory: venus
+
+      - name: Check code formatting
+        run: npm run format:check
 
       - name: Run tests
         working-directory: venus
