--- a/venus/package.json
+++ b/venus/package.json
@@ -11,7 +11,8 @@
         "test": "npx vitest",
         "cypress:open": "cypress open",
         "cypress:run": "cypress run",
-        "format": "prettier --write ."
+        "format": "prettier --write .",
+        "format:check": "prettier --check ."
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.3.0",
