--- a/venus/package.json
+++ b/venus/package.json
@@ -30,6 +30,7 @@
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
+    "react-select": "^5.10.1",
     "tailwindcss": "^4.1.3",
     "tinymce": "^7.9.1"
   },
