--- a/venus/package.json
+++ b/venus/package.json
@@ -24,12 +24,14 @@
         "date-fns": "^4.1.0",
         "dotenv": "^16.4.7",
         "maplibre-gl": "^5.4.0",
+        "media-chrome": "^0.10.3-canary.0-6670212",
         "motion": "^12.10.4",
         "openmeteo": "^1.1.4",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.3.0",
         "react-paginate": "^8.2.0",
+        "react-player": "^3.1.0",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.26.0",
         "tailwindcss": "^4.1.3"
