--- a/venus/package.json
+++ b/venus/package.json
@@ -35,6 +35,7 @@
         "react-player": "^3.1.0",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.26.0",
+        "sockjs-client": "^1.6.1",
         "tailwindcss": "^4.1.3"
     },
     "devDependencies": {
@@ -43,6 +44,7 @@
         "@testing-library/user-event": "^14.5.2",
         "@types/react": "^18.3.20",
         "@types/react-dom": "^18.3.6",
+        "@types/sockjs-client": "^1.5.4",
         "@vitejs/plugin-react": "^4.3.1",
         "cypress": "^13.17.0",
         "eslint": "^8.57.0",
@@ -56,7 +58,7 @@
         "prettier-plugin-tailwindcss": "^0.6.11",
         "tailwind-scrollbar": "^4.0.2",
         "typescript": "^5.8.3",
-        "vite": "^5.3.4",
-        "vitest": "^2.1.8"
+        "vite": "^6.3.5",
+        "vitest": "^3.2.4"
     }
 }
