--- a/venus/package.json
+++ b/venus/package.json
@@ -15,6 +15,7 @@
         "format:check": "prettier --check ."
     },
     "dependencies": {
+        "@hookform/resolvers": "^5.1.1",
         "@reduxjs/toolkit": "^2.3.0",
         "@stomp/stompjs": "^7.1.1",
         "@tailwindcss/vite": "^4.1.3",
@@ -25,18 +26,21 @@
         "axios": "^1.7.3",
         "date-fns": "^4.1.0",
         "dotenv": "^16.4.7",
+        "html-to-text": "^9.0.5",
         "maplibre-gl": "^5.4.0",
         "motion": "^12.10.4",
         "openmeteo": "^1.1.4",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-hook-form": "^7.60.0",
         "react-icons": "^5.3.0",
         "react-paginate": "^8.2.0",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.26.0",
         "react-select": "^5.10.1",
         "tailwindcss": "^4.1.3",
-        "tinymce": "^7.9.1"
+        "tinymce": "^7.9.1",
+        "zod": "^3.25.74"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^6.6.3",
