--- a/venus/package.json
+++ b/venus/package.json
@@ -15,6 +15,7 @@
         "format:check": "prettier --check ."
     },
     "dependencies": {
+        "@hookform/resolvers": "^5.1.1",
         "@reduxjs/toolkit": "^2.3.0",
         "@stomp/stompjs": "^7.1.1",
         "@tailwindcss/vite": "^4.1.3",
@@ -30,13 +31,15 @@
         "openmeteo": "^1.1.4",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-hook-form": "^7.60.0",
         "react-icons": "^5.3.0",
         "react-paginate": "^8.2.0",
         "react-player": "^3.1.0",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.26.0",
         "sockjs-client": "^1.6.1",
-        "tailwindcss": "^4.1.3"
+        "tailwindcss": "^4.1.3",
+        "zod": "^4.0.5"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^6.6.3",
