--- a/venus/package.json
+++ b/venus/package.json
@@ -33,10 +33,12 @@
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.60.0",
         "react-icons": "^5.3.0",
+        "react-intersection-observer": "^9.16.0",
         "react-paginate": "^8.2.0",
         "react-player": "^3.1.0",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.26.0",
+        "react-window": "^1.8.11",
         "sockjs-client": "^1.6.1",
         "tailwindcss": "^4.1.3",
         "zod": "^4.0.5"
@@ -47,6 +49,7 @@
         "@testing-library/user-event": "^14.5.2",
         "@types/react": "^18.3.20",
         "@types/react-dom": "^18.3.6",
+        "@types/react-window": "^1.8.8",
         "@types/sockjs-client": "^1.5.4",
         "@vitejs/plugin-react": "^4.3.1",
         "cypress": "^13.17.0",
