--- a/venus/package.json
+++ b/venus/package.json
@@ -20,7 +20,15 @@
         "@stomp/stompjs": "^7.1.1",
         "@tailwindcss/vite": "^4.1.3",
         "@tanstack/react-query": "^5.51.23",
-        "@tinymce/tinymce-react": "^6.1.0",
+        "@tiptap/extension-file-handler": "^3.0.9",
+        "@tiptap/extension-highlight": "^3.1.0",
+        "@tiptap/extension-image": "^3.0.9",
+        "@tiptap/extension-link": "^3.0.9",
+        "@tiptap/extension-placeholder": "^3.0.9",
+        "@tiptap/extension-text-align": "^3.0.9",
+        "@tiptap/pm": "^3.0.9",
+        "@tiptap/react": "^3.0.9",
+        "@tiptap/starter-kit": "^3.0.9",
         "@vis.gl/react-maplibre": "^8.0.4",
         "antd": "^5.23.4",
         "axios": "^1.7.3",
@@ -39,7 +47,6 @@
         "react-router-dom": "^6.26.0",
         "react-select": "^5.10.1",
         "tailwindcss": "^4.1.3",
-        "tinymce": "^7.9.1",
         "zod": "^3.25.74"
     },
     "devDependencies": {
