--- a/venus/package.json
+++ b/venus/package.json
@@ -34,6 +34,7 @@
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.60.0",
         "react-icons": "^5.3.0",
+        "react-intersection-observer": "^9.16.0",
         "react-paginate": "^8.2.0",
         "react-player": "^3.1.0",
         "react-redux": "^9.1.2",
