--- a/venus/package.json
+++ b/venus/package.json
@@ -20,6 +20,13 @@
         "@stomp/stompjs": "^7.1.1",
         "@tailwindcss/vite": "^4.1.3",
         "@tanstack/react-query": "^5.51.23",
+        "@tiptap/extension-file-handler": "^3.0.9",
+        "@tiptap/extension-image": "^3.0.9",
+        "@tiptap/extension-placeholder": "^3.0.9",
+        "@tiptap/extension-text-align": "^3.0.9",
+        "@tiptap/pm": "^3.0.9",
+        "@tiptap/react": "^3.0.9",
+        "@tiptap/starter-kit": "^3.0.9",
         "@vis.gl/react-maplibre": "^8.0.4",
         "antd": "^5.23.4",
         "axios": "^1.7.3",
@@ -41,7 +48,8 @@
         "react-router-dom": "^6.26.0",
         "sockjs-client": "^1.6.1",
         "tailwindcss": "^4.1.3",
-        "zod": "^4.0.5"
+        "zod": "^4.0.5",
+        "react-select": "^5.10.1"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^6.6.3",
